# Bureau

./: .gitignore  AGENTS-GUIDE-TO-WRITING-DOCS.md  LICENSE  Makefile  QUICKSTART.md  README.md  SETUP.md  USAGE.md  agent-clis-to-apis.md  charter.yml  comb.yml  directives.yml  mcp-workflows.md  must-have-mcps.md  pyproject.toml  queen.yml  set-up-all.sh  setup-mcp-servers.sh  start-zen-http.py  verify.md
.github/workflows/: ci.yml  uv-run.yml
agents/: README.md
agents/claude-subagents/: accessibility-auditor.md  ai-ml-eng.md  api-client-designer.md  api-integration.md  api-mocking-specialist.md  architect.md  architecture-audit.md  auth-specialist.md  background-job-architect.md  build-optimizer.md  caching-specialist.md  chaos-engineer.md  ci-pipeline-builder.md  code-reviewer.md  concurrency-specialist.md  cost-optimization-finops.md  cpp-pro.md  data-eng.md  datetime-specialist.md  db-internals.md  debugger.md  dependency-auditor.md  devops-infra-as-code.md  distributed-systems-architect.md  distributed-systems.md  environment-debugger.md  event-driven.md  explainer.md  feature-flag-engineer.md  finops-optimizer.md  frontend.md  git-surgeon.md  golang-pro.md  graphql-specialist.md  historian.md  http-client-specialist.md  implementation-helper.md  incident-commander.md  interviewer.md  kubernetes-operator.md  (+31 more)
agents/clink-role-prompts/: ai-ml-eng.md  api-integration.md  architect.md  architecture-audit.md  cost-optimization-finops.md  cpp-pro.md  db-internals.md  devops-infra-as-code.md  distributed-systems.md  explainer.md  frontend.md  golang-pro.md  implementation-helper.md  migration-refactoring.md  optimization.md  (+10 more)
configs/: AGENTS.md.template  CLAUDE.md  CLAUDE.md.template  claude.json  codex.json  gemini.json
docs/: CI.md  CONFIGURATION.md  QUICKSTART.md  SETUP.md  USAGE.md
for-use/: README.md  handoff-guidelines-by-claude.md  handoff-guidelines.md
lib/: __init__.py
mcps/: README.md  mcps-to-add.md  models-decision-guide.md  must-have-mcps.md  tools.md  when-to-use-each-tool.md
operations/: __init__.py  config_cli.py  config_loader.py  json_config_utils.py  validate_config.py
scripts/: bootstrap.sh  start-beehive
stacks/: _template.yml
tools/: README.md  bg-info.md  cli-tools-to-add.md  mcps-to-add.md  tools-decision-guide.md  tools.md
tools/mcp-servers/bureau-graph-extras/: pyproject.toml
tools/mcp-servers/bureau-graph-extras/src/bureau_graph_extras/: __init__.py  server.py
tools/mcps/websearchapi-mcp/: pyproject.toml
tools/mcps/websearchapi-mcp/websearchapi_mcp/: __init__.py
(+340 files in other folders)
