[project]
name = "bureau-graph-extras"
version = "0.1.0"
description = "Bureau MCP for blast_radius and cycle detection on Neo4j knowledge graphs"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.0.0",
    "neo4j>=5.0.0",
]

[project.scripts]
bureau-graph-extras = "bureau_graph_extras.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bureau_graph_extras"]
