[project]
name = "websearchapi-mcp"
version = "0.1.0"
description = "MCP server for websearchapi.ai - Google-quality search results"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
websearchapi-mcp = "websearchapi_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
